--- a/main.css
+++ b/main.css
@@ -5,7 +5,10 @@
     font-weight: 400;
 
 }
+img{
+    display: block;
 
+}
 body, html{
     height: 100%;
     width: 100%;
@@ -13,20 +16,29 @@ body, html{
 
 body{
     margin: 0;
-}
-.wrapper{
-    height: 100%;
-    width: 100%;
     overflow-x: hidden;
-    background-color: #001821;
+    background: #001821;
     font-size: 16px;
     line-height: 1.42;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-.main-page-wrapper{
-    background: url("https://github.com/volodmen/project2/blob/img/img/1.png?raw=true")center top no-repeat, url("https://github.com/volodmen/project2/blob/img/img/2.png?raw=true")right bottom no-repeat;
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    width: 100%;
+    overflow: hidden;
+    min-width: 1200px;
+
+    
 }
+.main-page-wrapper{
+    background: url("https://github.com/volodmen/project2/blob/img/img/1.png?raw=true")center top no-repeat, 
+    url("https://github.com/volodmen/project2/blob/img/img/2.png?raw=true")center bottom 165px no-repeat;
+
+}
+
 ul,li{
     padding: 0;
     margin:0;
@@ -53,24 +65,32 @@ h1,h2,h3,h4,h5,h6{
     margin: 0 auto;
 }
 .header{
-    position: relative;
-    min-height: 157px;
-    margin-bottom: 41px;
+    padding-top: 22px;
+    margin-bottom: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.logo,
+.header__services{
+    margin-bottom: -10px;
+}
+.header__col{
+    display: flex;
+    align-items: center;
+}
+.header__col--align--right{
+    justify-content: flex-end;
+}
+.logo__link,
 .menu,
 .phones{
-    position: absolute;
+
 }
-.logo{
+.logo__link{
     display: block;
-    top: 29px;
-    left: 0;
+    margin-right: 80px;
 }
 .menu{
-    top: 38px;
-    left: 296px;
-    transform: translateX(-50%)
 }
 .phones{
     right: 0;
@@ -87,10 +107,6 @@ h1,h2,h3,h4,h5,h6{
     font-size: 13px;
     text-decoration: underline;
 }
-.phones__desc{
-    line-height: 20px;
-    color: #999
-}
 .menu__item{
     display: inline-block;
     vertical-align: middle;
@@ -106,6 +122,7 @@ h1,h2,h3,h4,h5,h6{
     font-size: 14px;
 }
 .main{
+    
     margin-bottom: 53px;
 }
 .preview{
@@ -141,21 +158,23 @@ button{
     border-color: #F5170E;
 }
 .content{
-    margin-bottom: 104px;
+    margin-bottom: 125px;
 }
 .content__section{
     font-weight: 700;
     font-size: 36px;
     margin-bottom: 51px;
 }
+.content__list{
+    display: flex;
+    justify-content: space-between;
+}
 .content__item{
     min-height: 449px;
     background: #fff;
     border-radius: 6px;
-    display: inline-block;
-    margin-right: 22px;
-    margin-bottom: 22px;
-    width: 362px;
+    width: calc(100% /3 - 18px);
+    overflow: hidden;
 }
 .content__title{
     color: black;
@@ -176,15 +195,19 @@ button{
 
 
 }
-.content__item-calendar{
-    display: inline-block;
+.content__item-feature{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 16px;
+}
+.content__item-calendar-meal{
     vertical-align: top;
     width: 126;
-   /* margin-left: 6px;*/
-    margin-right: 28px;
+    margin-left: -36px;
+    margin-right: -29px;
 }
-.content__item-meal{
-    display: inline-block;
+.content__item-calendar-meal:last-child{
+    margin-right: 0;
 }
 .content__item-text{
     right: 0px;
@@ -196,9 +219,12 @@ button{
     vertical-align: top;
     width: 324px;
     min-height: 63px;
+    font-size: 14px;
+    margin-bottom: 25px;
+    line-height: 21px;
 }
-.content__button{
-    max-width: 135px;
+.button--tour{
+    min-width: 138px;
 
 }
 
@@ -211,7 +237,7 @@ button{
     margin-right: 0px;
 }
 .news{
-    margin-bottom: 124px;
+    margin-bottom: 146px;
 }
 .news__title{
     font-weight: 700;
@@ -219,42 +245,55 @@ button{
     line-height: 49px;
     margin-bottom: 52px;
 }
+.news__list{
+    display: flex;
+    margin-bottom: 46px;
+}
 .news__item{
-    display: inline-block;
     width: 555px;
     min-height: 394px;
-    margin-right: 24px;
     border: 0px solid #fff;
     position: relative;
+    margin-right: 2%;
+    flex: 1;
 }
 .news__item:last-child{
     margin-right: 0;
 }
-.news__content{
+.single-news__content{
     position: absolute;
     bottom: 25px;
     padding: 0 28px;
     min-height: 123px;
 }
-.news__date{
+.single-news__date{
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
     margin-bottom: 12px;
 }
-.news__subtitle{
+.single-news__subtitle{
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
     margin-bottom: 2px;
 }
-.news__info{
+.single-news__info{
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
 }
 .paginator{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.paginator--theme--light{
+    color: #000;
+    margin-bottom: 43px;
+}
+.paginator__item--active{
+
 }
 .paginator__display{
     font-weight: 400;
@@ -262,13 +301,23 @@ button{
     line-height: 20px;
     margin-right: 36px;
 }
-.paginator__display,.paginator__list{
-    display: inline-block;
-    vertical-align: middle;
+.paginator__list{
+    display: flex;
+    align-items: center;
 }
-.paginator_item{
-    display: inline-block;
-    vertical-align: middle;
+
+
+.paginator__item{
+    text-align: center;
+
+}
+.paginator--theme--light .paginator__item--active .paginator__link{
+    color: #FFFFFF;
+    background: #F5170E;
+}
+.paginator--theme--light .paginator__link:hover{
+    color: #FFFFFF;
+    background: #F5170E;
 }
 .paginator__link{
     display: inline-block;
@@ -279,18 +328,21 @@ button{
     background: transparent;
     line-height: 32px;
     transition: 0.4s;
-
+    font-weight: 700;
 }
 .paginator__link:hover{
     background: #ffffff;
     color: #F5170E;
     font-weight: 700;
 }
+.about{
+    display: flex;
+}
 .about:before, .about__desc{
-    display: inline-block;
-    vertical-align: top;
+
 }
 .about:before{
+    display: block;
     content: "";
     width: 490px;
     height: 505px;
@@ -298,10 +350,10 @@ button{
 }
 .about__desc{
     background: url("https://github.com/volodmen/project2/blob/img/img/mountains.png?raw=true");
-    padding: 70px 80px;
-    width: 785px;
+    padding: 70px 202px 70px 80px;
+    max-width: 785px;
     height: 455px;
-    margin-left: -140px;
+    margin-left: -136px;
     margin-top: 97px;
 }
 .about__title{
@@ -313,22 +365,45 @@ button{
 }
 .about__desc-text{
     margin-bottom: 43px;
-
+    width: 502px;
+    height: 135px;
 }
 .about__desc-text p{
     margin-bottom: 20px;
     color: #000;
+    font-size: 16px;
+line-height: 27px;
 }
 .about__desc-text p:last-child{
     margin-bottom: 0;
 }
 .footer-container__content{
-    border-top: 1px solid #9A9A9A;
+    border-top: 1px solid #ffffff3a;
+    margin-top: auto;
+    
 }
+.footer-container__section{
+    height: 132px;
+
+}
+
 .footer{
     height: 150px;
     position: relative;
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer__col{
+    display: flex;
+    align-items: center;
+}
+.footer__col--align--right{
+    justify-content: flex-end;
+}
+.socials{
+    margin-right: 74px;
+    margin-left: 274px;
 }
 .socials__list{
     top:49px;
@@ -338,7 +413,7 @@ button{
 .socials__item{
     display: inline-block;
     vertical-align: middle;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 .socials__item:last-child{
     margin-right: 0;
@@ -361,4 +436,161 @@ button{
 }
 .socials__item--icon--instagram .socials__link{
     background-image: url("https://github.com/volodmen/project2/blob/img/img/in.png?raw=true");
+}
+.phones__desc{
+    line-height: 20px;
+    color: #999;
+    font-size: 11px;
+    line-height: 20px;
+}
+.top-line{
+    min-height: 386px;
+    background: url(https://github.com/volodmen/project2/blob/main/project2/img/headline1.png?raw=true) center top no-repeat;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 0;
+}
+.top-line__container{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.page-title{
+    font-size: 72px;
+    line-height: 1;
+    font-weight: bold;
+}
+.breadcrumbs__list{
+    display: flex;
+    align-items: center;
+}
+.breadcrumbs__item{
+    display: flex;
+    align-items: center;
+    padding-left: 2px;
+}
+.breadcrumbs__item:first-child {
+    padding-left: 0px;
+}
+.breadcrumbs__item--active .breadcrumbs__link{
+    color:#9A9A9A;
+    text-decoration: none;
+}
+.breadcrumbs__item:after{
+    padding-left: 2px;
+    content: "/";
+    color: #9A9A9A;
+}
+.breadcrumbs__item:last-child:after {
+    display: none;
+}
+.breadcrumbs__link{
+    color:#9A9A9A;
+    font-size: 14px;
+}
+.page-content{
+    background: #FFFFFF;
+    color: #303030; 
+}
+.services{
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    margin-top: 120px;
+    margin-bottom:12px;
+}
+.services__item{
+    margin-bottom: 50px;
+
+}
+.services__desc{
+
+    display: flex;
+}
+.services__img{
+    width: 460px;
+    height: 333px;
+    margin-right: 57px;
+}
+.services__content{
+    flex: 1;
+    padding-top: 12px;
+}
+.services__subtitle{
+    font-size: 36px;
+    font-weight: bold;
+    color: #303030; 
+    margin-bottom: 28px;
+}
+.services__title{
+    margin-bottom: 46px;
+    line-height: 1.7;
+    width: 652px;
+    height: 139px;
+}
+.services__title p{
+    color: #303030;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 27px;
+}
+.btn{
+    background: #F5170E;
+    border-radius: 35px;
+    min-width: 168px;
+    min-height: 55px;
+    padding: 18px 39px;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+.btn--color--white{
+    color: #F5170E;
+    background: transparent;
+    border-color: #F5170E;
+    border: 2px solid #F5170E;
+}
+.inner__section{
+    background: #F4F5F5;
+    color: #1A1B1E;
+    padding: 83px 0;
+
+}
+.inner-section--bg--grey{
+    background: #F4F5F5;
+}
+.inner-section__title{
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 65px;
+    margin-bottom: 75px;
+    color: #1A1B1E;
+    margin-top: 88px;
+    margin-bottom: 85px;
+}
+.partners{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -22px;
+    align-items:center;
+    margin-bottom: 44px;
+}
+.partners__item{
+    margin-left: 20px;
+    margin-bottom: 69px;
+
+
+}
+.partners__item:nth-child(4n+1){
+    margin-left: 0;
+}
+
+.partners__logo{
+    text-decoration: none;
+    display: flex;
+    width: 270px;
+    align-items: center;
+    justify-content: center;
 }
