--- a/main.css
+++ b/main.css
@@ -138,7 +138,7 @@ h1,h2,h3,h4,h5,h6{
     font-weight: 700;
 }
 .dropdown__menu {
-    position: relative;
+    position: absolute;
     background: #EDEDED;
     border: 1px solid transparent;
     padding: 12px;
@@ -149,13 +149,13 @@ h1,h2,h3,h4,h5,h6{
     opacity: 0;
     transition: opacity .4s;
     border-radius: 5px;
-    margin-left: 95px;
+    margin-left: 34px;
 }
 
 .dropdown__menu:before {
     content: "";
     display: block;
-    height: 157px;
+    height: 18px;
     left: 0;
     right: 0;
     top: -29px;
@@ -175,9 +175,9 @@ h1,h2,h3,h4,h5,h6{
     vertical-align: middle;
     margin-right: 51px;
 }
-/*.menu__item--active .menu__link{
-    color: #F5170E;
-}*/
+.menu__item--active .menu__link{
+    color: #DA0100;
+}
 .menu__item:last-child{
     margin-right: 0;
 }
@@ -788,16 +788,26 @@ line-height: 27px;
 .form__input{
     flex: 1;
     margin-right: 30px;
-    background-repeat: 4px;
-    border: none;
+    border-radius: 4px;
+    border:none;
     background: #fff;
     padding: 22px 30px;
     font-size: 18px;
     color: #1A1B1E;
+
 }
 .form__input::placeholder{
     color: #666666;
 }
+.form__input:hover {
+    outline: none;
+    border: 1px solid #F5170E;
+}
+.form__input:focus {
+    outline: none;
+    border: 2px solid #F5170E;
+}
+
 .form__input:last-child{
     margin-right: 0px;
 }
@@ -819,6 +829,8 @@ line-height: 27px;
     flex: 1;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: -10px;
+    margin-right: -10px;
 }
 .controls__item{
     margin-bottom: 10px;
@@ -867,11 +879,7 @@ line-height: 27px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-}
-.central__logo{
     margin-top: 108px;
-
 }
 .central__desc{
     font-style: normal;
