--- a/main.css
+++ b/main.css
@@ -789,7 +789,7 @@ line-height: 27px;
     flex: 1;
     margin-right: 30px;
     border-radius: 4px;
-    border:none;
+    border: 2px solid transparent;
     background: #fff;
     padding: 22px 30px;
     font-size: 18px;
@@ -801,7 +801,7 @@ line-height: 27px;
 }
 .form__input:hover {
     outline: none;
-    border: 1px solid #F5170E;
+    border: 2px solid #F5170E;
 }
 .form__input:focus {
     outline: none;
